crates/ferrum-interfaces/tests/ui/vnext/fail/provider_resource_plan_is_not_deserialize.rs
use ferrum_interfaces::vnext::ProviderResourcePlan;

fn main() {
    let _: ProviderResourcePlan = serde_json::from_str("{}").unwrap();
}
